--- a/AtmosphericConditions.html
+++ b/AtmosphericConditions.html
@@ -202,4 +202,18 @@
       else phase = "New Moon";
 
       const nextFullMoon = new Date(newMoonRef.getTime() + Math.ceil((daysSinceNew / synodicMonth)) * synodicMonth * 24 * 60 * 60 * 1000 + (15 * 24 * 60 * 60 * 1000));
-      const nextNewMoon = new Date(newMoonRef.getTime() + Math.ceil((daysSinceNew / sy
+      const nextNewMoon = new Date(newMoonRef.getTime() + Math.ceil((daysSinceNew / synodicMonth)) * synodicMonth * 24 * 60 * 60 * 1000);
+
+      const moonHTML = `
+        <p><strong>Current phase:</strong> ${phase}</p>
+        <p><strong>Next Full Moon:</strong> ${nextFullMoon.toDateString()}</p>
+        <p><strong>Next New Moon:</strong> ${nextNewMoon.toDateString()}</p>
+      `;
+
+      document.getElementById("moonData").innerHTML = moonHTML;
+    }
+
+    getMoonData();
+  </script>
+</body>
+</html>
